<resources>
    <string name="app_name">Rate</string>
    <string name="action_settings">Settings</string>
    <string name="banks">Banks</string>
    <string name="average_today">Average today</string>
    <string name="by_dates">Graph</string>
    <string name="dollar_symbol">$</string>
    <string name="average_currency">Average currency</string>
    <string name="bank">Bank</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>

    <string-array name="bank_strings">
        <item>National bank</item>
        <item>Raiffeisen bank </item>
        <item>PrivatBank</item>
        <item>Kredyt Dnipro</item>
        <item>Oschadbank</item>
        <item>Credit Agricole</item>
        <item>UkrSybbank</item>
        <item>Kredobank</item>
        <item>Ukreximbank</item>
        <item>OTP Bank</item>
        <item>Idea Bank</item>
        <item>Procredit Bank</item>
        <item>Pumb</item>
        <item>Bank Pivdenny</item>
        <item>Black market</item>
        <item>Interbank</item>
    </string-array>

    <integer-array name="bank_integers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>16</item>
        <item>17</item>
    </integer-array>

    <string-array name="periods_strings">
        <item>Last 3 day</item>
        <item>Last 5 day</item>
        <item>Last 10 day</item>
    </string-array>

    <integer-array name="periods_int">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </integer-array>

    <string name="today">Today</string>
    <string name="average_in_banks">Average in banks</string>
    <string name="for_one">for</string>
    <string name="one_dollar">1$</string>
    <string name="one_euro">1€</string>
    <string name="in_avg">average</string>

    <string name="char_dollar">$</string>
    <string name="char_euro">€</string>
    <string name="date">Date</string>
    <string name="buy">Buy</string>
    <string name="sale">Sale</string>

    <string-array name="common_banks_lables">
        <item>Government</item>
        <item>Interbank</item>
        <item>Commercial</item>
        <item>Black market</item>
        <item>Average</item>
    </string-array>

    <string-array name="common_banks_keys">
        <item>government</item>
        <item>interbank</item>
        <item>commercial</item>
        <item>black</item>
        <item>avg</item>
    </string-array>

    <string name="euro">EUR</string>
    <string name="dollar">USD</string>
    <string name="average">Average</string>

</resources>
