<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/toolbar_banks"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor" />

    <TextView
        android:id="@+id/banktextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/bank"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/asktextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/ask"
        android:textIsSelectable="false"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/bidtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/asktextView"
        android:paddingRight="24dp"
        android:text="@string/bid"
        android:textSize="14dp" />
</RelativeLayout>